项目名称统一

--- a/hospital-center/pom.xml
+++ b/hospital-center/pom.xml
@@ -10,7 +10,7 @@
     </modules>
     <parent>
         <groupId>com.tian</groupId>
-        <artifactId>hospital-new</artifactId>
+        <artifactId>hospital-dubbo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
