--- a/hospital-house/pom.xml
+++ b/hospital-house/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <groupId>com.tian</groupId>
-    <artifactId>hospital-new</artifactId>
+    <artifactId>hospital-dubbo</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
