--- a/hospital-outpatient/pom.xml
+++ b/hospital-outpatient/pom.xml
@@ -11,7 +11,7 @@
 
     <parent>
         <groupId>com.tian</groupId>
-        <artifactId>hospital-new</artifactId>
+        <artifactId>hospital-dubbo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
