--- a/hospital-web/pom.xml
+++ b/hospital-web/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.tian</groupId>
-        <artifactId>hospital-new</artifactId>
+        <artifactId>hospital-dubbo</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
