--- a/hospital-outpatient/hospital-outpatient-provider/src/main/resources/application.properties
+++ b/hospital-outpatient/hospital-outpatient-provider/src/main/resources/application.properties
@@ -67,3 +67,8 @@ spring.redis.pool.max-idle=8
 spring.redis.pool.min-idle=0
 #连接超时时间（毫秒）
 spring.redis.timeout=30000
+
+
+spring.rabbitmq.addresses=localhost:5672
+spring.rabbitmq.username=guest
+spring.rabbitmq.password=guest
