--- a/hospital-outpatient/hospital-outpatient-provider/pom.xml
+++ b/hospital-outpatient/hospital-outpatient-provider/pom.xml
@@ -36,10 +36,9 @@
             <artifactId>nacos-client</artifactId>
             <version>${nacos.vsersion}</version>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+            <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
 
         <dependency>
@@ -74,18 +73,6 @@
         <dependency>
             <groupId>com.github.pagehelper</groupId>
             <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.2.3</version>
-        </dependency>
-        <!--shiro标签和thymeleaf的整合依赖-->
-        <dependency>
-            <groupId>com.github.theborakompanioni</groupId>
-            <artifactId>thymeleaf-extras-shiro</artifactId>
-            <version>2.0.0</version>
-        </dependency>
-        <!--spring和shiro的整合依赖-->
-        <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-spring</artifactId>
             <version>1.2.3</version>
         </dependency>
         <!--热部署-->
@@ -184,6 +171,12 @@
         <dependency>
             <groupId>com.tian</groupId>
             <artifactId>hospital-system-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.tian</groupId>
+            <artifactId>hospital-center-service</artifactId>
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
